define GET /map-supplier/rectangle API
